save and find all functions working properly
