# pkg/api/handler/user.go
@@ -8,6 +8,8 @@ import (
 	"github.com/jinzhu/copier"
 
 	domain "github.com/SethukumarJ/go-gin-clean-arch/pkg/domain"
+	utils "github.com/SethukumarJ/go-gin-clean-arch/pkg/utils"
+	"github.com/SethukumarJ/go-gin-clean-arch/pkg/response"
 	services "github.com/SethukumarJ/go-gin-clean-arch/pkg/usecase/interface"
 )
 
@@ -31,22 +33,24 @@ func NewUserHandler(usecase services.UserUseCase) *UserHandler {
 // @summary Get all users
 // @description Get all users
 // @tags users
-// @security ApiKeyAuth
 // @id FindAll
 // @produce json
 // @Router /api/users [get]
-// @response 200 {object} []Response "OK"
+// @Success 200 {object} response.Response{}
+// @Failure 422 {object} response.Response{}
 func (cr *UserHandler) FindAll(c *gin.Context) {
 	users, err := cr.userUseCase.FindAll(c.Request.Context())
 
 	if err != nil {
-		c.AbortWithStatus(http.StatusNotFound)
-	} else {
-		response := []Response{}
-		copier.Copy(&response, &users)
-
-		c.JSON(http.StatusOK, response)
+		response := response.ErrorResponse("error while getting users from database", err.Error(), nil)
+		c.Writer.Header().Add("Content-Type", "application/json")
+		c.Writer.WriteHeader(http.StatusBadRequest)
+		utils.ResponseJSON(*c, response)
+		return
 	}
+
+	response := response.SuccessResponse(true, "Listed All Users", users)
+	utils.ResponseJSON(*c, response)
 }
 
 func (cr *UserHandler) FindByID(c *gin.Context) {
@@ -72,24 +76,40 @@ func (cr *UserHandler) FindByID(c *gin.Context) {
 	}
 }
 
+// FindAll godoc
+// @summary Get all users
+// @description Save user
+// @tags users
+// @id Save
+// @param RegisterAdmin body domain.Users{} true "admin signup with username, phonenumber email ,password"
+// @produce json
+// @Router /api/users [Post]
+// @Success 200 {object} response.Response{}
+// @Failure 422 {object} response.Response{}
 func (cr *UserHandler) Save(c *gin.Context) {
-	var user domain.Users
+	var newUser domain.Users
 
-	if err := c.BindJSON(&user); err != nil {
+	if err := c.Bind(&newUser); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err})
 		return
 	}
 
-	user, err := cr.userUseCase.Save(c.Request.Context(), user)
+	user, err := cr.userUseCase.Save(c.Request.Context(), newUser)
 
 	if err != nil {
-		c.AbortWithStatus(http.StatusNotFound)
-	} else {
-		response := Response{}
-		copier.Copy(&response, &user)
-
-		c.JSON(http.StatusOK, response)
+		response := response.ErrorResponse("Failed to create user", err.Error(), nil)
+		c.Writer.Header().Add("Content-Type", "application/json")
+		c.Writer.WriteHeader(http.StatusUnprocessableEntity)
+		utils.ResponseJSON(*c, response)
+		return
 	}
+
+	
+	user.Password = ""
+	response := response.SuccessResponse(true, "SUCCESS", user)
+	c.Writer.Header().Add("Content-Type", "application/json")
+	c.Writer.WriteHeader(http.StatusOK)
+	utils.ResponseJSON(*c, response)
 }
 
 func (cr *UserHandler) Delete(c *gin.Context) {
